--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 logging.level.root= WARN
-logging.level.pl.put.poznan.scenariomanager= DEBUG
+logging.level.pl.put.poznan= DEBUG
 server.port = 8099
